--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <h1>Hello! SeongHyeon</h1>
-<h1>Hello!</h1>
-<!-- <h2>Hello!</h2> -->
+<h1>승리</h1>
+<h1>최성진</h1>
+
 </body>
 </html>
