--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
-<<<<<<< HEAD
 <body>
 
 <h1>Hello!</h1>
@@ -19,12 +18,11 @@
     <li>윈도우 프로그래밍</li>
 </ul>
 
-=======
 <body>
 <h1>Hello! SeongHyeon</h1>
 <h1>승리</h1>
 <h1>최성진</h1>
+<h1>편집완료</h1>
 
->>>>>>> branch 'master' of https://github.com/KangSage/test.git
 </body>
 </html>
