--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,6 +20,11 @@
     <li>윈도우 프로그래밍3</li>
 </ul>
 
+<h1>Hello! SeongHyeon</h1>
+<h1>승리</h1>
+<h1>최성진</h1>
+<h1>편집완료</h1>
+
 <p>테스트입니다.</p>
 </body>
 </html>
