--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,9 +11,16 @@
 
 <body>
 
+<ul>
+    <li>자바 프로그래밍2</li>
+    <li>윈도우 프로그래밍2</li>
+    <li>테스트입니다.2</li>
+    <li>윈도우 프로그래밍2</li>
+    <li>윈도우 프로그래밍3</li>
+</ul>
 
-<!-- 최성진 -->
-<h1>편집 완료!</h1>
+<!-- 최성진222 -->
+<h1>편집 완료222!</h1>
 
 </body>
 </html>
