--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
-	<h1>편집 완료222</h1>
+	<h1>편집 완료3</h1>
+<ul>
+    <li>자바 프로그래밍</li>
+    <li>윈도우 프로그래밍</li>
+</ul>
 </body>
 </html>
