--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,9 +14,9 @@
 <ul>
     <li>자바 프로그래밍ㄱㄱㄱ</li>
     <li>윈도우 프로그래밍</li>
+    <li>윈도우 프로그래밍2</li>
+    <li>윈도우 프로그래밍3</li>
 </ul>
-<p>test..okㄱㄱㄱ</p>
-<p>test..ok</p>
-<p>okokokok</p>
+
 </body>
 </html>
