--- a/src/main/webapp/test02.html
+++ b/src/main/webapp/test02.html
@@ -9,10 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-<h1>Hello2ㅌㅌㅌ34!</h1>
-<h2>Hello234!</h2>
-
-<h1>Hello234xxx!</h1>
-<p>dkdkdkdk</p>
+<h1>Hello!</h1>
+<div>ok</div>
 </body>
 </html>
